# RobotathonESP32

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  _config.yml  gitdiagrams.drawio  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json  devontainer.json  install-dependencies.sh  install-webdev-dependencies.sh
.github/workflows/: jekyll-gh-pages.yml  jekyll.yml
Scripts/: MacInstall.sh  UbuntuInstall.sh
components/QTR-8A/: CMakeLists.txt  QTR-8A.c
components/apds9960/: CMakeLists.txt  apds9960.c
components/apds9960/include/: apds9960.h
components/arduino/: CMakeLists.txt
components/bluepad32_arduino/include/: ArduinoController.h
components/callbacks/: CMakeLists.txt  controller_callbacks.cpp
components/callbacks/include/: controller_callbacks.h
components/cmd_system/: cmd_system.c
components/cmd_system_4.4/: cmd_system.c
docs/: .gitignore  Gemfile  _config.yml  index.md  package-lock.json  package.json
docs/_assets/css/: just-the-docs-custom-dark.scss  just-the-docs-custom-light.scss
docs/_includes/: head.html  head_custom.html
docs/_layouts/: default.html  home.html  table_wrappers.html
docs/_posts/: 2024-05-14-welcome-to-jekyll.markdown
docs/_sass/color_schemes/: catppuccin_latte.scss  dark.scss  (+3 more)
esp32/: CMakeLists.txt
hello_world/main/: idf_component.yml
main/: CMakeLists.txt  arduino_main.cpp  challenges.h  color_challenge.cpp  hello_world_main.c  idf_component.yml  main.c  my_platform.c  sketch.cpp
main/helper/: IR_challenge.cpp  challenges.h  color_challenge.cpp  line_challenge.cpp  motors.cpp  motors.h
(+97 files in other folders)
